--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,14 @@
-<div style=" background-color: #2F241A; width: 1247px; height: 670px; position: fixed;; ">
-	<%= image_tag("poview.png", :size => "1247x512") %>
+
+<div id="bg">
+	<h5>2016 жылы Алматы қаласының Мәдениет Басқармасымен ұйымдастырылатын ашық аспан астындағы 
+	“Оркестрлер Шеруі“ музыка фестивалі ”Culture Development Foundation” Қоғамдық Қорының жобасы емес.
+	Қор 2012 және 2015 жылдар аралығында өткен (III, IV, V и VI Оркестрлер Шеруі) фестивальдардың 
+	ұйымдастырушысы болып келді. </h5>
+	<h5 style=" margin-top: 1px; ">Бізбен байланысу поштасы</h5>
+	<a class="btn btn-primary" style=" margin-left: 590px; " href=" mailto:director@cdf.kz  " >director@cdf.kz</a>
+	<h5>Фестиваль музыки под открытым небом ”Парад Оркестров”, организуемый в 2016 году управлением 
+	культуры города Алматы, не является проектом Общественного Фонда ”Culture Development Foundation”. 
+	Фонд являлся организатором фестиваля в период с 2012 по 2015 год (III, IV, V и VI Парад Оркестров).   </h5>
+	<h5 style=" margin-top: 1px; ">Связаться с нами по почте</h5>
+	<a class="btn btn-primary" style=" margin-left: 590px; " href=" mailto:director@cdf.kz  " >director@cdf.kz</a>
 </div>
