--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,8 +19,8 @@
   
   background-image: url('poview.png');
   position: fixed; 
-  
-  
+  top: 0; 
+  left: 0; 
 	
   /* Preserve aspet ratio */
   min-width: 100%;
@@ -28,7 +28,7 @@
 }
 
 h5 {
-	color: white;
+	font-color: white;
 	width: 700px;
 	text-align: center;
 	margin-left: 300px;
