--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="bg">
+<div style="background-image: url('poview.png'); position: fixed; top: 0; left: 0; min-width: 100%; min-height: 100%;">
 	<h5>2016 жылы Алматы қаласының Мәдениет Басқармасымен ұйымдастырылатын ашық аспан астындағы 
 	“Оркестрлер Шеруі“ музыка фестивалі ”Culture Development Foundation” Қоғамдық Қорының жобасы емес.
 	Қор 2012 және 2015 жылдар аралығында өткен (III, IV, V и VI Оркестрлер Шеруі) фестивальдардың 
