--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 
-<a style="background-image: url('../assets/images/poview.png'); position: fixed; top: 0; left: 0; min-width: 100%; min-height: 100%;">
+<div style="background: url('../assets/images/poview.png'); position: fixed; top: 0; left: 0; min-width: 100%; min-height: 100%;">
 	<h5>2016 жылы Алматы қаласының Мәдениет Басқармасымен ұйымдастырылатын ашық аспан астындағы 
 	“Оркестрлер Шеруі“ музыка фестивалі ”Culture Development Foundation” Қоғамдық Қорының жобасы емес.
 	Қор 2012 және 2015 жылдар аралығында өткен (III, IV, V и VI Оркестрлер Шеруі) фестивальдардың 
@@ -11,4 +11,4 @@
 	Фонд являлся организатором фестиваля в период с 2012 по 2015 год (III, IV, V и VI Парад Оркестров).   </h5>
 	<h5 style=" margin-top: 1px; ">Связаться с нами по почте</h5>
 	<a class="btn btn-primary" style=" margin-left: 590px; " href=" mailto:director@cdf.kz  " >director@cdf.kz</a>
-</a>
+</div>
