--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -4,7 +4,7 @@
 
 .bg {
   
-  background-image: image-url('poview.png');
+  background-image: asset-url('poview.png');
   position: fixed; 
   top: 0; 
   left: 0; 
