--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,7 @@
 
 .bg {
   
-  background-image: url(image_path('poview.png'));
+  background-image: url('poview.png');
   position: fixed; 
   top: 0; 
   left: 0; 
